[metadata]
name = plain-rsa
version = 1.0.0
author = Zack Didcott
summary = Plain RSA encryption without padding
license = GPLv3
url = https://github.com/Zedeldi/python-plain-rsa

[options]
packages =
  plain_rsa
python_requires = >= 3.9

[flake8]
ignore = W191
doctests = True
exclude =
  .git,
  __pycache__,
  .venv,
  build,
  dist
